src/objects/Map_Anything_Address_Configuration__c.object
<CustomObject>
    <description>Maps fields to into addresses so that ExAM can display them on a map.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Field_Name__c</fullName>
        <label>City Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Field_Name__c</fullName>
        <label>Country Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Field_Name__c</fullName>
        <label>Postal Code Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Field_Name__c</fullName>
        <label>Street Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Map Anything Address Configuration</label>
    <nameField>
        <label>Map Anything Address Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Anything Address Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>